[package]
name = "deja"
version = "0.2.0"
description = "A simple command line utility to cache output of commands"
homepage = "https://github.com/tomafro/deja"
repository = "https://github.com/tomafro/deja"
documentation = "https://github.com/tomafro/deja"
authors = ["Tom Ward <tom@popdog.net>"]
license = "MIT"
categories = ["command-line-utilities", "caching"]
edition = "2021"
exclude = [".github", "/test", "/bin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0.0"
anyhow = "1.0.0"
clap = { version = "4.5.0", features = ["cargo", "string", "env", "color", "wrap_help", "unicode"] }
clap_complete = "4.5.0"
dirs = "5.0.0"
humantime = "2.1.0"
merkle_hash = "3.5.0"
ron = { version = "0.8.0", features = ["integer128"] }
serde = { version = "1.0.0", features = ["derive"] }
ulid = "1.1.3"
whoami = "1.5.0"
